<resources>
    <string name="app_name">KGS - Sportfest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Ausloggen</string>

    <!--  ______________________LOGIN ACTIVITY_______________________
      Strings für die Login-Maske
      -->

    <string name="login_et_username">Benutzername</string>
    <string name="login_et_password">Passwort</string>
    <string name="login_btn_login">Anmelden</string>
    <string name="login_tv_go_registration">Noch kein Benutzerkonto vorhanden.</string>
    <string name="login_tv_go_registration_ac">Registrieren</string>
    <string name="login_cb_remember">Benutzerdaten merken</string>

    <!---________________________SHARED PREFERENCE FILE__________________
    String für den Dateinamen.
    -->
    <string name="preference_file_key">sportfestPreferences</string>


    <!--  ______________________REGISTRATION ACTIVITY_________________
    Strings für die Registrierung-Maske
    -->

    <string name="registration_tv_title">Registrierung</string>
    <string name="registration_et_username">Benutzername</string>
    <string name="registration_et_password">Passwort</string>
    <string name="registration_et_password_repeat">Passwort wiederholen</string>
    <string name="registration_et_token">Token</string>
    <string name="registration_btn_register">Registrieren</string>
    <string name="registration_tv_go_login">Es existiert bereits ein Benutzerkonto?</string>
    <string name="registration_tv_go_login_ac">Anmelden</string>
    <string name="registration_iv_content_description">KGS-Logo</string>

    <!--  ______________________REGISTRATION ACTIVITY_________________
    Strings für die Registrierung-Maske
    -->

    <string name="fragment_matchlist_tv_time">Uhr</string>
    <string name="fragment_matchlist_tv_gym">Halle: </string>
    <string name="fragment_matchlist_tv_result">Ergebnis: </string>
    <string name="fragment_matchlist_tv_referee">Schiedsrichter: </string>

    <!-- __________________________SCOREBOARD FRAGMENT____________________
    Strings für das Scoreboard-Fragment
    -->
    <string name="fragment_scoreboard_btn_timer_start">Starten</string>
    <string name="fragment_scoreboard_btn_timer_reset">Zurücksetzen</string>
    <string name="fragment_scoreboard_tv_goals"><u>Punkte</u></string>
    <string name="fragment_scoreboard_btn_goal_teama">+</string>
    <string name="fragment_scoreboard_btn_goal_teamr">-</string>
    <string name="fragment_scoreboard_btn_cancel">Abbrechen</string>
    <string name="fragment_scoreboard_btn_submit">Absenden</string>
    <string name="fragment_scoreboard_btn_set_time">Setzen</string>
    <string name="fragment_scoreboard_et_input_time">Zeit (Minuten:Sekunden)</string>

</resources>
