<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/kgssportfestlogo"
            android:contentDescription="@string/registration_iv_content_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/registration_tv_title"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#00e676"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/registration_et_username"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:fontFamily="sans-serif"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#00e676"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/registration_et_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:fontFamily="sans-serif"
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#00e676"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/registration_et_password_repeat"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#69f0ae"
            android:text="@string/registration_btn_register"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_tv_go_login"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_tv_go_login_ac"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>