<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
<!-- Todo Text Size kein db sonder sd-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/kgssportfestlogo"
            />

        <EditText
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#00e676"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/login_et_username"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/et_username"/>

        <EditText
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#00e676"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/login_et_password"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/et_password"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_marginTop="8dp"
            android:text="@string/login_cb_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cb_remember_me"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#69f0ae"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white"
            android:id="@+id/btn_login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_go_registration"
            android:textColor="@android:color/white"
            android:paddingRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_go_registration_ac"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/tv_register" />
    </LinearLayout>

</RelativeLayout>
